apps/media/profilarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profilarr
spec:
  selector:
    app.kubernetes.io/name: profilarr
  ports:
    - name: http
      port: 6868
      targetPort: http
